🚀 Final Master's Project Update
✅ Complete Documentation & Code Cleanup:
- Added comprehensive SETUP.md with detailed installation guide
- Updated README.md with complete tech stack and features
- Created complete UML diagrams (PlantUML, Mermaid, PDF)
- Professional Master's level code documentation throughout

✅ Android App Enhancements:
- Added LocationManager and LocationUtils for GPS services
- Improved MainActivity.kt with professional documentation
- Enhanced AirQualityViewModel with comprehensive comments
- Added proper error handling and state management

✅ Backend Improvements:
- Added professional documentation to all Python files
- Enhanced main.py, models.py, database.py with Master's level comments
- Added waqi_service.py and keep_alive.py for better architecture
- Improved error handling and database connection logic

✅ Security & Configuration:
- Updated .gitignore for proper Node.js and environment handling
- Secured .env.example by removing real API keys
- Added proper environment variable documentation

✅ Project Structure:
- Removed unnecessary files (api_architecture.md, __pycache__)
- Added UML documentation in multiple formats
- Complete project ready for academic submission

🎯 Status: Production-ready Master's level project with professional documentation, deployed backend, and fully functional Android app

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Railway Environment Variables für Air Quality App
 
-# WAQI API Token
-WAQI_API_TOKEN=116950729791df873923c7e0864a50b9eccf66a0
+# WAQI API Token (Beispiel - ersetze mit deinem eigenen Token)
+WAQI_API_TOKEN=your_waqi_api_token_here
 
 # Supabase Database URL (wird in Railway als Environment Variable gesetzt)
 # DATABASE_URL wird automatisch von Railway erkannt
-# Falls nicht automatisch: postgresql://postgres:Hatschepsut1@db.syqqyhqczajtgsfzigyo.supabase.co:5432/postgres
+# Format: postgresql://username:password@host:port/database
 
 # Weitere mögliche Konfigurationen
 # DEBUG=False
