--- a/air_quality_app_android/.gitignore
+++ b/air_quality_app_android/.gitignore
@@ -13,3 +13,6 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# Mapbox access token (sensitive)
+app/src/main/res/values/mapbox_access_token.xml
